Fixed contact page spacing and SVG size

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -31,8 +31,6 @@
     }
   }
 
-
-
   .about-text {
     line-height: 160%;
   }
@@ -45,14 +43,16 @@
     display: none;
   }
 }
+.contact-svg {
+  min-width: 500px;
+}
 
 // Small Screen
 @media screen and (max-width: 640px) {
-
   header {
     width: 100%;
     padding: 0;
-    
+
     nav {
       width: 100%;
       background: $dark-blue;
@@ -91,7 +91,6 @@
   }
 
   #mobile-contact-button {
-
     width: 151px;
     height: 57px;
     min-width: 151px;
@@ -115,15 +114,15 @@
   }
 
   // Home Page
-.index-container {
-  grid-template-rows: auto 1fr;
-}
+  .index-container {
+    grid-template-rows: auto 1fr;
+  }
 
-.home {
-  display: grid;
-  justify-items: center;
-  align-content: center;
-}
+  .home {
+    display: grid;
+    justify-items: center;
+    align-content: center;
+  }
   // About Page
 
   .about {
@@ -138,7 +137,7 @@
 
   .cta {
     margin-bottom: 40px;
-  }  
+  }
 
   // Projects Page
   .projects {
@@ -147,4 +146,11 @@
 
   // Contact Page
 
+  .contact-section {
+    padding: 2vh 5vw;
+  }
+
+  .contact-svg {
+    min-width: 200px;
+  }
 }
