--- a/scss/style.scss
+++ b/scss/style.scss
@@ -68,7 +68,6 @@ main {
   align-items: center;
 }
 
-
 footer {
   position: relative;
   display: flex;
@@ -112,14 +111,13 @@ footer {
   row-gap: 50px;
 }
 
-
 .social-icons {
   display: flex;
   justify-content: center;
   column-gap: 90px;
 }
 
-.icon-link svg{
+.icon-link svg {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transition-duration: 150ms;
   transition-timing-function: ease-in;
@@ -139,7 +137,6 @@ footer {
   width: 100%;
   height: auto;
 }
-
 
 /* Project Page */
 .projects-container {
@@ -268,22 +265,27 @@ footer {
 .contact {
   height: 100%;
   display: flex;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   column-gap: 80px;
   justify-content: center;
   align-items: center;
-  padding: 30px 0;
+  padding: 30px 2vw;
 }
 
+.contact-wrapper {
+}
 
 .contact-section {
+  max-width: 100vw;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
-
 .contact-text {
+  display: flex;
+  flex-direction: column;
   justify-self: start;
+  justify-content: space-between;
 }
 
 .contact-section a {
@@ -296,7 +298,6 @@ footer {
   height: 100%;
   width: 64px;
 }
-
 
 .contact-svg {
   height: fit-content;
